# -Intraday-Trading-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DECISIONS.md  CLAUDE.md  MASTER_BUILD_PROMPT_FINAL.MD  PROGRESS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
api/: README.md  __init__.py  __main__.py  app.py  auth.py  cli.py  deps.py  models.py
api/routers/: __init__.py  controls.py  health.py  pnl.py  positions.py  signals.py  status.py  watchlist.py  ws.py
apps/australia/: .env.example  Dockerfile  README.md  config.yaml  main.py
apps/india/: .env.example  Dockerfile  README.md  config.yaml  main.py
dashboard/: README.md  __init__.py  __main__.py  app.py  fetcher.py
infra/: docker-compose.yml
infra/aws/: README.md
infra/docker/: Dockerfile.base
infra/prometheus/: prometheus.yml
shared/: SESSION_MANAGER_README.md  __init__.py  session_manager.py
shared/alerts/: README.md  __init__.py  __main__.py  cli.py  cost_alert.py  dispatcher.py  email_sender.py  models.py  telegram.py
shared/auth/: README.md  __init__.py  __main__.py  cli.py  ibkr_auth.py  kite_auth.py  models.py  scheduler.py  token_store.py
shared/backtesting/: README.md  __init__.py  __main__.py  cli.py  engine.py  markout.py  metrics.py  models.py  promotion_gate.py  report.py  repository.py  slippage.py  walk_forward.py
shared/broker/: __init__.py
shared/compliance/: README.md  __init__.py  __main__.py  audit_log.py  australia.py  cli.py  engine.py  india.py  kill_switch.py  models.py  strategy_registry.py
shared/core/: README.md  __init__.py  config.py  constants.py  exceptions.py  logging.py  types.py
shared/execution/: README.md  __init__.py  __main__.py  cli.py  dead_letter.py  engine.py  models.py
shared/indicators/: README.md  __init__.py  __main__.py  cache.py  cli.py  engine.py  models.py  registry.py  utils.py
shared/ingestion/: README.md  __init__.py  __main__.py  agent.py  aggregator.py  buffer.py  cli.py  ibkr_ws.py  kite_ws.py  models.py  validator.py  yfinance_fallback.py
shared/instruments/: README.md  __init__.py  __main__.py  adjustment.py  cli.py  manual_overrides.py  manual_overrides.yaml  models.py  repositories.py  service.py  sources.py
shared/lua/: circuit_breaker.lua  margin_guard.lua  position_close.lua  rate_limiter.lua  signal_dedup.lua  sl_linkage.lua
shared/monitor/: README.md  __init__.py  __main__.py  agent.py  cli.py  grafana_dashboard.json  heartbeat.py  metrics.py  models.py  pnl_tracker.py
shared/orchestrator/: README.md  __init__.py  __main__.py  cli.py  graph.py  memory.py  nodes.py  state.py
shared/patterns/: README.md  __init__.py  __main__.py  candlestick.py  cli.py  engine.py  models.py  orb.py  support_resistance.py
shared/proto/: __init__.py  messages.proto  messages_pb2.py  messages_pb2.pyi
shared/reconciliation/: README.md  __init__.py  __main__.py  agent.py  block_registry.py  cli.py  differ.py  models.py  publisher.py
shared/regime/: README.md  __init__.py  __main__.py  classifier.py  cli.py  features.py  mlflow_registry.py  models.py  publisher.py
shared/reporting/: README.md  __init__.py  __main__.py  cli.py  csv_export.py  html_report.py  metrics.py  models.py  pdf_report.py
shared/risk/: README.md  __init__.py  __main__.py  circuit_breaker.py  cli.py  correlation.py  engine.py  models.py  sizing.py
shared/sentiment/: README.md  __init__.py  __main__.py  agent.py  cache.py  cli.py  cost_tracker.py  feeds.py  market_indicators.py  models.py  scorer.py
shared/signals/: README.md  __init__.py  __main__.py  cli.py  engine.py  explainer.py  gates.py  models.py  publisher.py
shared/storage/: README.md  __init__.py  backfill.py  connection.py  models.py  repositories.py  schema.sql  sqlite_buffer.py  validation.py
shared/universe/: README.md  __init__.py  __main__.py  cli.py  compliance.py  filter.py  models.py  repository.py  scoring.py
tests/: conftest.py  test_alerts_cli.py  test_alerts_cost.py  test_alerts_dispatcher.py  test_alerts_email.py  test_alerts_models.py  test_alerts_telegram.py  test_api_auth.py  test_api_cli.py  test_api_controls.py  test_api_health.py  test_api_pnl.py  test_api_positions.py  test_api_signals.py  test_api_status.py  test_api_watchlist.py  test_api_ws.py  test_auth_cli.py  test_auth_ibkr.py  test_auth_kite.py  test_auth_models.py  test_auth_scheduler.py  test_auth_token_store.py  test_ingestion_agent.py  test_ingestion_aggregator.py  test_ingestion_buffer.py  test_ingestion_cli.py  test_ingestion_models.py  test_ingestion_validator.py  test_monitor_agent.py  test_monitor_cli.py  test_monitor_heartbeat.py  test_monitor_metrics.py  test_monitor_models.py  test_monitor_pnl.py  test_orchestrator_cli.py  test_orchestrator_graph.py  test_orchestrator_memory.py  test_orchestrator_nodes.py  test_orchestrator_state.py  (+12 more)
tests/integration/: conftest.py  test_holiday_sources_live.py  test_instruments_live_sources.py  test_yfinance_backfill_live.py
tests/unit/: test_apps_main.py  test_backfill.py  test_backtesting_cli.py  test_backtesting_engine.py  test_backtesting_markout.py  test_backtesting_metrics.py  test_backtesting_promotion_gate.py  test_backtesting_report.py  test_backtesting_slippage.py  test_backtesting_walk_forward.py  test_compliance_australia.py  test_compliance_cli.py  test_compliance_engine.py  test_compliance_india.py  test_compliance_kill_switch.py  (+58 more)
(+50 files in other folders)
